package eu.epfc.anc3.model.enums;

public enum
GameStatus {
    DEPART,
    START,
    END,
    PLANT_GRASS,
    PLANT_CARROT,
    PLANT_CABBAGE,
    FERTILIZE,
    COLLECT
}
