package eu.epfc.anc3.model.enums;

public enum PlotElement {
    GRASS,DIRT,CARROT,CABBAGE
}
